[package]
name = "ringhash"
version = "0.1.0"
edition = "2021"
authors = ["isjieliu@163.com"]
description = "Consistent hashing implementation"
keywords = ["consistent-hashing", "ringhash"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Millione/ringhash"
documentation = "https://docs.rs/ringhash/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5"
faststr = "0.2"
fxhash = "0.2"
parking_lot = "0.12"
thiserror = "1"
